2021-11-29    <alexander.nelson@nist.gov>

	* objects.py: Add abstract base classes for parents, children, and geometric objects

2021-08-27    <alexander.nelson@nist.gov>

	* Python: PEP 561 type designation added, though scripts and modules are still typed as needed thus far
	* objects.py: Cut copy-paste error

2021-08-20    <alexander.nelson@nist.gov>

	* Python: Reversion: `dfxml_cwd` is named `walk_to_dfxml` again
	* Python: Reversion: `dfxml_diff` is named `make_differential_dfxml` again
	* Policy: Tools are moved to `dfxml/bin/`
	* Policy: Tools installed to $PATH in setup.cfg now need documentation and unit testing

2021-08-19    <alexander.nelson@nist.gov>

	* Python: Add dfxml_diff to exported tools
	* Python: Name change - make_differential_dfxml.py is now dfxml_diff

2021-08-16    <j4n6ru@gmail.com>

	* Python: Move tools back to package installation directory tree
	* Python: Name change - walk_to_dfxml.py is now dfxml_cwd

2021-07-23    <alexander.nelson@nist.gov>

	* Python: Use setup.cfg to define installable package and command-line tools practice

2021-07-02

	* DFXML: Separate C++ and Python code bases on Github.

2020-01-03    <alexander.nelson@nist.gov>

	* Schema: Update schema pointer to 'develop'

2020-01-02    <alexander.nelson@nist.gov>

	* objects.py tests: Test partition object properties
	* objects.py: Add PartitionObject.partition_index property
	* objects.py tests: Test empty object serialization

2019-12-18    <alexander.nelson@nist.gov>

	* objects.py tests: Test storage layers with presence permutations
	* objects.py: Shore up storage layer transitions

2019-12-10    <alexander.nelson@nist.gov>

	* objects.py tests: Test error property on disk image object
	* objects.py: Add error property to disk image object
	* Schema: Track schema branch add_disk_image_error
	* objects.py tests: Reduce set of tests run by Makefile and pytest

2019-12-09    <alexander.nelson@nist.gov>
